[ADD] Fabric peers to Kubernetes
[UPDATE] Swagger and Kubernetes deployment files
